tests/ui/impl-trait/in-trait/default-body-type-err-2.stderr
error[E0308]: mismatched types
  --> $DIR/default-body-type-err-2.rs:5:9
   |
LL |     async fn woopsie_async(&self) -> String {
   |                                      ------ expected `String` because of return type
LL |         42
   |         ^^- help: try using a conversion method: `.to_string()`
   |         |
   |         expected `String`, found integer
   |
   = note: expected struct `String`
                found type `{integer}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
